Changes to portfolio + misc stuff added like S6P

--- a/PortfolioSite/experience.html
+++ b/PortfolioSite/experience.html
@@ -177,6 +177,18 @@
                     <p>Experience in graphic design, logos, icons, emblems, textures etc..</p>
                 </div>
             </div>
+            <!--IntelliJ Idea Community Edition -->
+            <div class="secondary-grid-item">
+                <!-- Front of Idea card -->
+                <div class="card-front">
+                    <h1>IntelliJ IDEA</h1>
+                    <img src="images/tools-images/IntelliJ_IDEA_Icon.png" alt="IntelliJ Icon">
+                </div>
+                <!-- Back of IntelliJ card-->
+                <div class="card-back">
+                    <p>Experience with Java and Kotlin in IDEA community w/ github support.</p>
+                </div>
+            </div>
         <!-- End of main div -->
         </div>
 
