--- a/PortfolioSite/projects.html
+++ b/PortfolioSite/projects.html
@@ -63,6 +63,19 @@
                 date, so I put it on my github as well!
             </p>
         </div>
+        <button class="accordion">Minecraft Mod (AussieMod)</button>
+        <div class="panel">
+            <h1>Minecraft Mod (AussieMod)</h1>
+            <a href="https://github.com/AustinCBYUi/testingmod" target="_blank">
+                <img src="images/projects-images/mc_logo_placeholder.png" alt="Program 4 showcase">
+            </a>
+            <p>
+                My Minecraft Mod named AussieMod will be released fully in the future after I have developed all
+                the content I decided to add. I plan to continuously update this in the future, amongst working on 
+                other projects for games like DayZ. This was developed to teach myself Java, and because I suddenly 
+                became Minecraft-obsessed for a short time!
+            </p>
+        </div>
 
 
                     <!-- All footer stuff -->
